test/units/TypingSpec/valid/prog/fun-align-wild-tabs.algst
foo : ∀(a:TU). a -> a
foo [_] a = a
