test/units/TypingSpec/invalid/types/app-invalid-2.algst
\(f : ∀(a:TU). a -> ()) -> f 10
